[BUGFIX] Make popover visible

--- a/Resources/Public/Styles/basic.css
+++ b/Resources/Public/Styles/basic.css
@@ -230,6 +230,7 @@
     background: #fff;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     min-width: 90vw;
+    z-index:9999
 }
 
 .popover--top {
